Robust modal activation; ensure showing activated

...window

REVIEW: 123875
BUG: 348083