shell_client.h
@@ -72,6 +72,7 @@ public:
     bool isMovableAcrossScreens() const override;
     bool isResizable() const override;
     bool isShown(bool shaded_is_shown) const override;
+    void hideClient(bool hide) override;
     void maximize(MaximizeMode) override;
     MaximizeMode maximizeMode() const override;
     bool noBorder() const override;
